--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -4,5 +4,14 @@
       "Default": "Debug",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Debug",
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    }
   }
 }
