--- a/tori.csproj
+++ b/tori.csproj
@@ -9,7 +9,7 @@
     </PropertyGroup>
 
     <PropertyGroup Condition=" '$(Configuration)' == 'Dev' ">
-      <DefineConstants>TRACE;RELEASE</DefineConstants>
+      <DefineConstants>TRACE;RELEASE;DEV</DefineConstants>
       <Optimize>true</Optimize>
     </PropertyGroup>
 
