--- a/appsettings.json
+++ b/appsettings.json
@@ -22,7 +22,7 @@
             {
               "Name": "File",
               "Args": {
-                "path": "../Logs/log-.log",
+                "path": "/home/ec2-user/logs/log-.log",
                 "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss} [{Level}] {Message}{NewLine}{Exception}",
                 "rollingInterval": "Day",
                 "fileSizeLimitBytes": 10485760,
